<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">phng_s_application3</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_i">I</string>
    <string name="lbl_danger">DANGER</string>
    <string name="lbl_j">J</string>
    <string name="msg_your_collected">Your Collected Plants</string>
    <string name="lbl_k">K</string>
    <string name="lbl_l">L</string>
    <string name="lbl_m">M</string>
    <string name="lbl_n">N</string>
    <string name="lbl_02_01_2019">02 . 01 . 2019</string>
    <string name="lbl_o">O</string>
    <string name="lbl_next">NEXT</string>
    <string name="lbl_p">P</string>
    <string name="lbl_cirsium">CIRSIUM</string>
    <string name="lbl_q">Q</string>
    <string name="lbl_r">R</string>
    <string name="lbl_s">S</string>
    <string name="lbl_dahlia">DAHLIA</string>
    <string name="lbl_t">T</string>
    <string name="lbl_u">U</string>
    <string name="lbl_v">V</string>
    <string name="lbl_plant">PLANT</string>
    <string name="lbl_w">W</string>
    <string name="lbl_x">X</string>
    <string name="lbl_home">HOME</string>
    <string name="lbl_y">Y</string>
    <string name="lbl_articles2">ARTICLES</string>
    <string name="lbl_z">Z</string>
    <string name="lbl_description">DESCRIPTION</string>
    <string name="lbl_alagatre_plant">Alagatre Plant</string>
    <string name="lbl_cinnamomum">CINNAMOMUM</string>
    <string name="lbl_dierama">DIERAMA</string>
    <string name="lbl_adding_new">Adding New</string>
    <string name="lbl_sign_in">SIGN IN</string>
    <string name="msg_learn_many_plan">Learn Many Plants Species</string>
    <string name="msg_let_s_learn_mor2">Let\u2019s Learn More About Plants</string>
    <string name="lbl_cactus2">Cactus</string>
    <string name="msg_password_has_be">Password has been sent to email.</string>
    <string name="msg_david_austin_w">David Austin, Who Breathed Life Into the Rose, Is Dead at 92</string>
    <string name="msg_forgot_password">Forgot Password?</string>
    <string name="lbl_hello">Hello</string>
    <string name="lbl_homely">#Homely</string>
    <string name="lbl_garden">GARDEN</string>
    <string name="lbl_suket">SUKET</string>
    <string name="lbl_a">A</string>
    <string name="lbl_family">FAMILY</string>
    <string name="lbl_articles">Articles</string>
    <string name="lbl_b">B</string>
    <string name="lbl_c">C</string>
    <string name="lbl_d">D</string>
    <string name="lbl_identify_plants">Identify Plants</string>
    <string name="lbl_e">E</string>
    <string name="lbl_f">F</string>
    <string name="lbl_g">G</string>
    <string name="lbl_h">H</string>
    <string name="msg_public_parks_as">Public parks aside, getting a dose of nature can be a tricky task during an urban escape. But nature should and can fit into that city getaway, according to Kally Ellis, the founder of the London florist company McQueens and the in-house florist for the Maybourne Hotel Group. \u201cConnecting with the natural world wherever you are is a great antidote to jet lag and travel tiredness,\u201d she said. \u201cPlants and flowers can refresh us, boost our energy and help us recalibrate.\u201d</string>
    <string name="lbl_huge_plants">Huge Plants</string>
    <string name="lbl_fullname">FullName</string>
    <string name="lbl_cistus">CISTUS</string>
    <string name="msg_don_t_have_acco">Don\u2019t Have Account?</string>
    <string name="lbl_auto">AUTO</string>
    <string name="lbl_home2">Home</string>
    <string name="msg_search_for_plan">Search For Plants </string>
    <string name="lbl_send_email">SEND EMAIL</string>
    <string name="lbl_adding_new2">ADDING NEW</string>
    <string name="lbl_heavy_cactus">Heavy Cactus</string>
    <string name="lbl_species2">Species</string>
    <string name="lbl_shylla_monic">Shylla Monic</string>
    <string name="lbl_2019_01_01">2019 . 01 . 01</string>
    <string name="lbl_2018_12_25">2018 . 12 . 25</string>
    <string name="msg_the_word_cactu">The word "cactus" derives, through Latin, from the Ancient Greek ??????, kaktos, a name originally used by Theophrastus for a spiny plant whose identity is not certain. Cacti occur in a wide range of shapes and sizes. Most cacti live in habitats subject to at least some drought. </string>
    <string name="lbl_password">Password</string>
    <string name="lbl_kingdom">KINGDOM</string>
    <string name="msg_102_type_of_pla">102 Type Of Plants</string>
    <string name="msg_read_many_artic">Read Many Articles About Plant</string>
    <string name="lbl_circle_cactus">Circle Cactus</string>
    <string name="msg_search_for_cact">Search For Cactus</string>
    <string name="msg_let_s_learn_mor">"Let's learn more about beautiful plants and read many articles about plants and gardening"</string>
    <string name="lbl_forget_password">Forget password</string>
    <string name="msg_reset_link_will">Reset link will be sent your email</string>
    <string name="lbl_digitalis">DIGITALIS</string>
    <string name="lbl_cissus">CISSUS</string>
    <string name="msg_you_can_identif">"You can identify the plants you don't know through your camera"</string>
    <string name="lbl_hello_taylor">Hello Taylor,</string>
    <string name="lbl_fat_cactus">Fat Cactus</string>
    <string name="lbl_daphne">DAPHNE</string>
    <string name="lbl_mini">#Mini</string>
    <string name="lbl_cute">#Cute</string>
    <string name="lbl_email2">email</string>
    <string name="msg_search_for_arti">Search For Articles</string>
    <string name="lbl_follow">Follow</string>
    <string name="lbl_shivani_vora">Shivani Vora</string>
    <string name="lbl_4_1">4.1</string>
    <string name="lbl_taylor_swift">Taylor Swift</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_home_plants">Home Plants</string>
    <string name="lbl_sign_up2">SIGN UP</string>
    <string name="lbl_echinacea">ECHINACEA</string>
    <string name="msg_los_angeles_ca">Los Angeles, California</string>
    <string name="lbl_profile">PROFILE</string>
    <string name="msg_cactus_spines_a">Cactus spines are produced from specialized structures...</string>
    <string name="lbl">#</string>
    <string name="msg_taylorswift_gma">TaylorSwift@gmail.com</string>
    <string name="lbl_gandul">GANDUL</string>
    <string name="msg_even_on_urban_e">"Even on Urban Excursions, Finding Mother Nature's Charms"</string>
    <string name="lbl_echinops">ECHINOPS</string>
    <string name="msg_taylorswift_gma2">TaylorSwift@gmail.com </string>
    <string name="lbl_email">Email</string>
    <string name="lbl_photo">PHOTO</string>
    <string name="lbl_cactus">CACTUS</string>
    <string name="lbl_plantae">Plantae</string>
    <string name="lbl_vegetables">VEGETABLES</string>
    <string name="lbl_login">LOGIN</string>
    <string name="msg_let_s_learn_abo">"Let's learn about the many plant species that exist in this world"</string>
    <string name="lbl_photography">Photography</string>
    <string name="msg_even_on_urban_e2">"Even on Urban Excursions, Finding Mother Nature's Charms"</string>
    <string name="lbl_red_cactus">Red Cactus</string>
    <string name="msg_68_types_of_pla">68 Types of Plants</string>
    <string name="lbl_cactaceae">Cactaceae</string>
    <string name="lbl_species">SPECIES</string>
    <string name="lbl_signup2">SignUp</string>
    <string name="lbl_decoration">DECORATION</string>
    <string name="lbl_1_tbd">#1 TBD</string>
    <string name="lbl_plant_types">Plant Types</string>
    <string name="msg_register_new_ac">Register new account</string>
    <string name="lbl_caesalpinia">CAESALPINIA</string>
    <string name="lbl_welok">WELOK</string>
    <string name="msg_search_for_spec">Search For Species</string>
    <string name="lbl_remember_me">Remember me</string>
    <string name="msg_please_enter_valid_text">Please enter valid text</string>
    <string name="msg_please_enter_valid_pa">Please enter valid password</string>
    <string name="msg_please_enter_valid_email">Please enter valid email</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="msg_camera_storage_permission">This Application need permission\n1.Camera permission to capture the image.\n2.Storage Access permission to save the captured image.</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="title_activity_a">a</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textRight">textRight</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>


    <string name="edit_profile_data">Edit Profile Data</string>
    <string name="update_profile_pic">Update Profile Pic</string>
    <string name="update_name">Update Name</string>
    <string name="change_password">Change Password</string>
    <string name="update_local">Update Local</string>
    <string name="new_post">New Post!</string>
    <string name="write_something">Write something!</string>
    <string name="posting_as">Posting As</string>
    <string name="anonymous">Anonymous</string>
    <string name="post_articles">Post Articles</string>
</resources>
