<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signupScreenVM" type="com.phngsapplication.app.modules.signupscreen.data.viewmodel.SignupScreenVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearSignUpScreen"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <TextView android:ellipsize="end" android:id="@+id/txtSignUp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_80pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signupScreenVM.signupScreenModel.txtSignUp}"
            style="@style/txtAndadaProromanbold30_1" tools:text="@string/lbl_signup2"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtRegisternewac"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signupScreenVM.signupScreenModel.txtRegisternewac}"
            style="@style/txtAndadaProromanmedium16" tools:text="@string/msg_register_new_ac"/>

        <TextView
            android:id="@+id/txtEmail"
            style="@style/txtAndadaProromanbold15_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_marginEnd="@dimen/_23pxh"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@{signupScreenVM.signupScreenModel.txtEmail}"
            tools:ignore="TextSizeCheck"
            tools:text="@string/lbl_email" />

        <EditText
            android:id="@+id/etEmailOne"
            style="@style/etAndadaProromanmedium17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_marginEnd="@dimen/_19pxh"
            android:ellipsize="end"
            android:hint="@string/msg_taylorswift_gma"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_10pxv"
            android:singleLine="true"
            android:text="@={signupScreenVM.signupScreenModel.etEmailOneValue}"
            android:textColorHint="@color/bluegray_800"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/etGroupNinety"
            style="@style/etAndadaProromanmedium17_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_38pxv"
            android:layout_marginEnd="@dimen/_19pxh"
            android:ellipsize="end"
            android:hint="@string/lbl_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_6pxv"
            android:singleLine="true"
            android:text="@={signupScreenVM.signupScreenModel.etGroupNinetyValue}"
            android:textColorHint="@color/gray_600_90"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/etGroupNinetyTwo"
            style="@style/etAndadaProromanmedium17_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_43pxv"
            android:layout_marginEnd="@dimen/_19pxh"
            android:ellipsize="end"
            android:hint="@string/lbl_fullname"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_5pxv"
            android:singleLine="true"
            android:text="@={signupScreenVM.signupScreenModel.etGroupNinetyTwoValue}"
            android:textColorHint="@color/gray_600_90"
            tools:ignore="Autofill" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUpOne"
            style="@style/btnSolidRounded_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_62pxv"
            android:layout_marginEnd="@dimen/_19pxh"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_16pxv"
            android:singleLine="true"
            android:text="@string/lbl_sign_up2"
            android:textAllCaps="false"
            tools:ignore="TextSizeCheck"
            tools:text="@string/lbl_sign_up2" />
    </LinearLayout>
</layout>
