<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginScreenVM" type="com.phngsapplication.app.modules.loginscreen.data.viewmodel.LoginScreenVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearLoginScreen"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <TextView android:ellipsize="end" android:id="@+id/txtHello"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_76pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginScreenVM.loginScreenModel.txtHello}"
            style="@style/txtAndadaProromanbold30_1" tools:text="@string/lbl_hello"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtLetsLearnMor"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{loginScreenVM.loginScreenModel.txtLetsLearnMor}"
            style="@style/txtAndadaProromanmedium16" tools:text="@string/msg_let_s_learn_mor2"/>
        <TextView android:ellipsize="end" android:id="@+id/txtEmail"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginScreenVM.loginScreenModel.txtEmail}"
            style="@style/txtAndadaProromanbold14" tools:text="@string/lbl_email"/>
        <EditText android:ellipsize="end"
            android:hint="@string/msg_taylorswift_gma"
            android:id="@+id/etEmailOne"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_10pxv"
            android:paddingEnd="@dimen/_30pxh" android:singleLine="true"
            android:text="@={loginScreenVM.loginScreenModel.etEmailOneValue}"
            android:textColorHint="@color/bluegray_800"
            style="@style/etAndadaProromanmedium17" tools:ignore="Autofill"/>
        <EditText android:ellipsize="end"
            android:hint="@string/lbl_password"
            android:id="@+id/etGroupEightyFive"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_38pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_9pxv"
            android:paddingEnd="@dimen/_30pxh" android:singleLine="true"
            android:text="@={loginScreenVM.loginScreenModel.etGroupEightyFiveValue}"
            android:textColorHint="@color/gray_600_90"
            style="@style/etAndadaProromanmedium15" tools:ignore="Autofill"/>
        <LinearLayout android:id="@+id/linearRowrememberme"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_27pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatCheckBox
                android:buttonTint="@color/gray_600"
                android:ellipsize="end"
                android:fontFamily="@font/andada_pro"
                android:id="@+id/checkBoxRememberme"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_weight="0.5" android:layout_width="0dp"
                android:letterSpacing="0.01"
                android:paddingStart="@dimen/_7pxh"
                android:singleLine="true"
                android:text="@string/lbl_remember_me"
                android:textColor="@color/gray_600"
                android:textFontWeight="500"
                android:textSize="@dimen/_13pxh"
                android:textStyle="bold" tools:text="@string/lbl_remember_me"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtForgotPassword"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_112pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.5" android:layout_width="0dp"
                android:letterSpacing="0.01" android:singleLine="true"
                android:text="@{loginScreenVM.loginScreenModel.txtForgotPassword}"
                style="@style/txtAndadaProromanmedium13" tools:text="@string/msg_forgot_password"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnLogin"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_36pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:text="@string/lbl_login" android:textAllCaps="false"
            style="@style/btnSolidRounded_1" tools:text="@string/lbl_login"/>
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearRowdonthaveacco"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtDontHaveAcco"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_weight="0.72" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{loginScreenVM.loginScreenModel.txtDontHaveAcco}"
                style="@style/txtAndadaProromanmedium13" tools:text="@string/msg_don_t_have_acco"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtSignUp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.28" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{loginScreenVM.loginScreenModel.txtSignUp}"
                style="@style/txtAndadaProromanbold13_1" tools:text="@string/lbl_sign_up"/>
        </LinearLayout>
        <FrameLayout android:id="@+id/frameStack2019planthink"
            android:layout_height="@dimen/_291pxv"
            android:layout_marginTop="@dimen/_24pxv" android:layout_width="match_parent">
            <TextView android:ellipsize="end"
                android:id="@+id/txt2019Planthink"
                android:layout_gravity="bottom|center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8pxv"
                android:layout_marginEnd="@dimen/_109pxh"
                android:layout_marginStart="@dimen/_109pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{loginScreenVM.loginScreenModel.txt2019Planthink}"
                style="@style/txtSFProTextregular9" tools:text="@string/msg_2019_planthink"/>
            <ImageView android:id="@+id/imageKeyboards"
                android:layout_gravity="start"
                android:layout_height="@dimen/_291pxh"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_keyboards}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_keyboards"/>
        </FrameLayout>
    </LinearLayout>
</layout>
