<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="forgetPassScreenOneVM" type="com.phngsapplication.app.modules.forgetpassscreenone.data.viewmodel.ForgetPassScreenOneVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearForgetPassScr"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <TextView android:ellipsize="end"
            android:id="@+id/txtForgetpassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_80pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{forgetPassScreenOneVM.forgetPassScreenOneModel.txtForgetpassword}"
            style="@style/txtAndadaProromanbold30_1" tools:text="@string/lbl_forget_password"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtResetlinkwill"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{forgetPassScreenOneVM.forgetPassScreenOneModel.txtResetlinkwill}"
            style="@style/txtAndadaProromanmedium16" tools:text="@string/msg_reset_link_will"/>

        <TextView
            android:id="@+id/txtEmail"
            style="@style/txtAndadaProromanbold15_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_marginEnd="@dimen/_23pxh"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@{forgetPassScreenOneVM.forgetPassScreenOneModel.txtEmail}"
            tools:ignore="TextSizeCheck"
            tools:text="@string/lbl_email2" />

        <EditText
            android:id="@+id/etEmailOne"
            style="@style/etAndadaProromanmedium17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_marginEnd="@dimen/_23pxh"
            android:ellipsize="end"
            android:hint="@string/msg_taylorswift_gma2"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_10pxv"
            android:singleLine="true"
            android:text="@={forgetPassScreenOneVM.forgetPassScreenOneModel.etEmailOneValue}"
            android:textColorHint="@color/bluegray_800"
            tools:ignore="Autofill" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSendEmail"
            style="@style/btnSolidRounded_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_147pxv"
            android:layout_marginEnd="@dimen/_23pxh"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_16pxv"
            android:singleLine="true"
            android:text="@string/lbl_send_email"
            android:textAllCaps="false"
            tools:ignore="TextSizeCheck"
            tools:text="@string/lbl_send_email" />
    </LinearLayout>
</layout>
