<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listPlantRowModel" type="com.phngsapplication.app.modules.listplant.data.model.ListPlantRowModel"/>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <FrameLayout
            android:id="@+id/frameStackrectangleOne"
            style="@style/groupStylewhite_3"
            android:layout_width="@dimen/_139pxh"
            android:layout_height="@dimen/_139pxv"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/imageRectangleOne"
                cornerRadius="@{@dimen/_3pxh}"
                imageRes="@{@drawable/img_rectangle_125x125}"
                android:layout_width="@dimen/_125pxh"
                android:layout_height="@dimen/_125pxh"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginHorizontal="@dimen/_7pxh"
                android:layout_marginVertical="@dimen/_7pxv"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription"
                tools:src="@drawable/img_rectangle_125x125" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/linearColumnredcactus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_marginBottom="@dimen/_2pxv"
            android:layout_weight="0.54"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtRedCactus"
                style="@style/txtAndadaProromanbold17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@{listPlantRowModel.txtRedCactus}"
                tools:ignore="TextSizeCheck"
                tools:text="@string/lbl_red_cactus" />

            <LinearLayout
                android:id="@+id/linearRowkingdom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtKINGDOM"
                    style="@style/txtAndadaProromanbold12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{listPlantRowModel.txtKINGDOM}"
                    tools:ignore="TextSizeCheck"
                    tools:text="@string/lbl_kingdom" />

                <TextView
                    android:id="@+id/txtFAMILY"
                    style="@style/txtAndadaProromanbold12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{listPlantRowModel.txtFAMILY}"
                    tools:ignore="TextSizeCheck"
                    tools:text="@string/lbl_family" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearRowplantae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtPlantae"
                    style="@style/txtAndadaProromanmedium12_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.43"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{listPlantRowModel.txtPlantae}"
                    tools:ignore="TextSizeCheck"
                    tools:text="@string/lbl_plantae" />

                <TextView
                    android:id="@+id/txtCactaceae"
                    style="@style/txtAndadaProromanmedium12_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_37pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.57"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{listPlantRowModel.txtCactaceae}"
                    tools:ignore="TextSizeCheck"
                    tools:text="@string/lbl_cactaceae" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtPrice"
                style="@style/txtAndadaProromanbold12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@{listPlantRowModel.txtPrice}"
                tools:ignore="TextSizeCheck"
                tools:text="@string/lbl_description" />

            <TextView
                android:id="@+id/txtDescription"
                style="@style/txtAndadaProromanregular12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4pxv"
                android:text="@{listPlantRowModel.txtDescription}"
                tools:ignore="TextSizeCheck"
                tools:text="@string/msg_cactus_spines_a" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
